changes for invisible closed sidebar toggle issue

--- a/web/src/containers/App/_App.scss
+++ b/web/src/containers/App/_App.scss
@@ -104,11 +104,13 @@ $inner_container-border: 1px solid $border-color;
 
 		&.close-sidebar {
 			.sidebar-toggle {
-				transform: translateX(-90%);
+				transform: translateX(-100%);
 			}
 			min-width: 0;
 			max-width: 0;
-			overflow: hidden;
+			.sidebar-container {
+				overflow: hidden;
+			}
 		}
 	}
 	.exchange-warning {
